--- a/src/style.css
+++ b/src/style.css
@@ -2,4 +2,18 @@
 
 body{
     background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
+
+.text {
+  
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: black;
 }
